--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,127 @@
 
 body {
     font-family: 'Source Sans Pro';
+    /* background-color: rgb(74, 92, 194); */
+    margin: 0;
+    /* background-color: #ce997c;
+    background-image: url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%23ffffff' fill-opacity='0.4'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"); */
 }
-
+#site-wrap{
+    height:100vh; 
+    display: grid;
+    grid-template-columns: 1fr; 
+    /* 1fr takes up a fraction whatever space is available */
+    grid-gap: 0px;
+    grid-template-rows: 100px min-content 100px ;
+    grid-template-areas: 
+      " header " 
+      " main "
+      " footer "
+    ;
+} 
+.header {
+    grid-area: header;
+    background-color: white;
+    padding: 20px;
+    display: flex; /* stacks all items in the leader from left to right (converts a row of items into column by default)*/
+    align-items: center; 
+    justify-content: space-between; /* forces items to have same distance between them (since there's only 2 items, it pushes one to the left and the other to the right)*/
+}
+.header .nav, .logo{
+    list-style: none; /* removes bullet points */
+    padding: 0;
+    display: flex; /* forces them to be displayed horizontally */
+}
+ul .logo{
+    height: 75px;
+}
+li h1{
+    color: rgb(74, 92, 194);
+}
+.header .nav li{
+    text-decoration: none;
+    border: 2px solid plum;
+    border-radius: 50em; /* hack to create rounded pill cirlces */
+    color: plum; 
+    padding: 10px 20px; /* adjusts individual pill */
+    margin: 0 16px; /* adjusts spacing between each pill*/
+    text-transform: uppercase;
+    font-weight: bold;
+  }
+.header .nav li:hover{
+    background-color: plum;
+    color: white
+}
+.main{
+    grid-area: main;
+    padding: 20px;
+    background-color: #aca3f0;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1200 800'%3E%3Cdefs%3E%3CradialGradient id='a' cx='0' cy='800' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%239d81ec'/%3E%3Cstop offset='1' stop-color='%239d81ec' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='b' cx='1200' cy='800' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23dc83f4'/%3E%3Cstop offset='1' stop-color='%23dc83f4' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='c' cx='600' cy='0' r='600' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23e85ff3'/%3E%3Cstop offset='1' stop-color='%23e85ff3' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='d' cx='600' cy='800' r='600' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23aca3f0'/%3E%3Cstop offset='1' stop-color='%23aca3f0' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='e' cx='0' cy='0' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23965fe8'/%3E%3Cstop offset='1' stop-color='%23965fe8' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='f' cx='1200' cy='0' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23fc60b6'/%3E%3Cstop offset='1' stop-color='%23fc60b6' stop-opacity='0'/%3E%3C/radialGradient%3E%3C/defs%3E%3Crect fill='url(%23a)' width='1200' height='800'/%3E%3Crect fill='url(%23b)' width='1200' height='800'/%3E%3Crect fill='url(%23c)' width='1200' height='800'/%3E%3Crect fill='url(%23d)' width='1200' height='800'/%3E%3Crect fill='url(%23e)' width='1200' height='800'/%3E%3Crect fill='url(%23f)' width='1200' height='800'/%3E%3C/svg%3E");
+    background-attachment: fixed;
+    background-size: cover;
+}
+.footer{
+    grid-area: footer;
+    color: white;
+}
+div #button-options {
+    display: flex;
+    justify-content: space-evenly;
+}
+div #button-options > div {
+    margin: 20px; 
+}
+div #card-container {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+.btn-option {
+    /* border: 2px solid white;
+    background-color: plum; */
+    background-image: linear-gradient(to right, #A770EF 0%, #CF8BF3 51%, #A770EF 100%);
+    color: white;
+    padding: 14px 28px;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+}
+.btn-option:hover{
+    background-position: right center;
+    background-color: #CF8BF3;
+    background-image: none;
+    /* border: 2px solid  rosybrown; */
+}
+#form-container{
+    display: flex;
+    justify-content: center;
+}
+.form-options{
+    margin: 10px;
+    color: white;
+    text-align: center;
+}
+#find-form #find-input{
+    height:35px; 
+    width: 330px;
+    font-size: 16px;
+    border-radius: 25px;
+    margin: 5px;
+    padding-left: 10px;
+    padding-right: 15px;
+}
+#find-form .fa {
+    font-size: 20px;
+}
+table {
+    display: inline-table;
+    width: 100%;
+}
+th, td {
+    padding: 4px;
+    text-align: center;
+    border-bottom: 1px solid white;
+}
 .stars-outer {
     display: inline-block;
     position: relative;
@@ -27,9 +146,9 @@ body {
     font-size: 25px;
 } 
 .scene {
-    width: 350px;
-    height: 455px;
-    border: 1px solid #CCC;
+    width: 355px;
+    height: 450px;
+    /* border: 1px solid #CCC; */
     margin: 40px 40px;
     perspective: 600px;
 }
@@ -41,45 +160,30 @@ body {
     cursor: pointer;
     position: relative;
 }
-
 .card.is-flipped {
     transform: rotateY(180deg);
 }
-
 .card__face {
     position: absolute;
     width: 100%;
     height: 100%;
-    color: rgb(0, 0, 0);
     text-align: center;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     overflow: auto;
-}
-  
+    border-radius: 15px;
+} 
 .card__face--front {
     background: white;
+    color: rgb(74, 92, 194);
 }
-  
 .card__face--back {
-    background :pink;
+    background: rgb(74, 92, 194);
+    color: white;
     transform: rotateY(180deg);
-    padding: 15px;
-}
-  
+} 
 .card-image {
     max-width:300px;
     max-height:200px;
     object-fit: contain;
 }
-#button-options {display: flex;}
-.btn-option {
-    border: 2px solid black;
-    background-color: white;
-    color: black;
-    padding: 14px 28px;
-    font-size: 16px;
-    cursor: pointer;
-    display: flex;
-}
-  
