--- a/css/styles.css
+++ b/css/styles.css
@@ -102,14 +102,26 @@ div #card-container {
     color: white;
     text-align: center;
 }
-#find-form #find-input{
-    height:35px; 
+#form-container input{
+    height:30px; 
     width: 330px;
     font-size: 16px;
     border-radius: 25px;
     margin: 5px;
     padding-left: 10px;
     padding-right: 15px;
+}
+.half-btn {
+    color: white;
+    height:30px; 
+    width: 100px;
+    font-size: 16px;
+    border-radius: 25px;
+    text-align: center;
+    margin: 5px;
+    background-image: linear-gradient(to right, #A770EF 0%, #CF8BF3 51%, #A770EF 100%);
+    font-weight: bolder;
+
 }
 #find-form .fa {
     font-size: 20px;
