--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,4 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700');
-
-body {
-    font-family: 'Source Sans Pro';
-    /* background-color: rgb(74, 92, 194); */
-    margin: 0;
-    /* background-color: #ce997c;
-    background-image: url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%23ffffff' fill-opacity='0.4'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"); */
-}
 #site-wrap{
     height:100vh; 
     display: grid;
@@ -20,6 +12,14 @@ body {
       " footer "
     ;
 } 
+body {
+    font-family: 'Source Sans Pro';
+    /* background-color: rgb(74, 92, 194); */
+    margin: 0;
+    cursor: pointer;
+    /* background-color: #ce997c;
+    background-image: url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%23ffffff' fill-opacity='0.4'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"); */
+}
 .header {
     grid-area: header;
     background-color: white;
@@ -48,6 +48,7 @@ li h1{
     margin: 0 16px; /* adjusts spacing between each pill*/
     text-transform: uppercase;
     font-weight: bold;
+    cursor: pointer;
   }
 .header .nav li:hover{
     background-color: plum;
@@ -56,7 +57,6 @@ li h1{
 .main{
     grid-area: main;
     padding: 20px;
-    background-color: #aca3f0;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1200 800'%3E%3Cdefs%3E%3CradialGradient id='a' cx='0' cy='800' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%239d81ec'/%3E%3Cstop offset='1' stop-color='%239d81ec' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='b' cx='1200' cy='800' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23dc83f4'/%3E%3Cstop offset='1' stop-color='%23dc83f4' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='c' cx='600' cy='0' r='600' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23e85ff3'/%3E%3Cstop offset='1' stop-color='%23e85ff3' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='d' cx='600' cy='800' r='600' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23aca3f0'/%3E%3Cstop offset='1' stop-color='%23aca3f0' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='e' cx='0' cy='0' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23965fe8'/%3E%3Cstop offset='1' stop-color='%23965fe8' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='f' cx='1200' cy='0' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23fc60b6'/%3E%3Cstop offset='1' stop-color='%23fc60b6' stop-opacity='0'/%3E%3C/radialGradient%3E%3C/defs%3E%3Crect fill='url(%23a)' width='1200' height='800'/%3E%3Crect fill='url(%23b)' width='1200' height='800'/%3E%3Crect fill='url(%23c)' width='1200' height='800'/%3E%3Crect fill='url(%23d)' width='1200' height='800'/%3E%3Crect fill='url(%23e)' width='1200' height='800'/%3E%3Crect fill='url(%23f)' width='1200' height='800'/%3E%3C/svg%3E");
     background-attachment: fixed;
     background-size: cover;
@@ -198,4 +198,52 @@ th, td {
     max-width:300px;
     max-height:200px;
     object-fit: contain;
+}
+.switch-field {
+    margin: 5px;
+    display: flex;
+    overflow: hidden;
+    background-color: white;
+    height:30px; 
+    width: 356px;
+    border-radius: 25px;
+    margin: 5px;
+    padding-left: 00px;
+    padding-right: 3px;
+    padding-top: 3px;
+    padding-bottom: 0px;
+
+}
+
+.switch-field p {
+    color: dimgrey;
+    font-size: 16px;
+    width: 159px;
+    text-align: left;
+}
+
+.switch-field input {
+    position: absolute !important;
+    clip: rect(0, 0, 0, 0);
+    height: 1px;
+    width: 1px;
+    border: 0;
+    overflow: hidden;
+}
+
+.switch-field label {
+    background-color: white;
+    color: #a9a9a9;
+    font-size: 16px;
+    text-align: center;
+    height:26px; 
+    width: 135px;
+    border-radius: 25px;
+    transition: all 0.1s ease-in-out;
+}
+
+.switch-field input:checked + label {
+    background-image: linear-gradient(to right, #A770EF 0%, #CF8BF3 51%, #A770EF 100%);
+    color: white;
+    font-weight: bold;
 }
