--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700');
+@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700);
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300ita‌​lic,400italic,500,500italic,700,700italic,900italic,900);
+
 #site-wrap{
     height:100vh; 
     display: grid;
     grid-template-columns: 1fr; 
     /* 1fr takes up a fraction whatever space is available */
     grid-gap: 0px;
-    grid-template-rows: 100px min-content 100px ;
+    grid-template-rows: 100px min-content 1fr ;
     grid-template-areas: 
       " header " 
       " main "
@@ -33,11 +36,19 @@ body {
     padding: 0;
     display: flex; /* forces them to be displayed horizontally */
 }
+button, input {
+    border-color: white;
+    background-color: white;
+}
 ul .logo{
     height: 75px;
 }
 li h1{
-    color: rgb(74, 92, 194);
+    /* color: rgb(74, 92, 194); */
+    /* text-shadow: 2px 2px 0px rgb(24, 231, 204); */
+    background: -webkit-linear-gradient(top right, rgb(113, 255, 236), rgb(137, 76, 216), rgb(255, 131, 172));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 .header .nav li{
     text-decoration: none;
@@ -61,6 +72,69 @@ li h1{
     background-attachment: fixed;
     background-size: cover;
 }
+#home {
+    color: white;
+    min-height: 100%;
+    display: block;
+    padding-right: 20px;
+    padding-left: 20px;
+}
+.intro{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
+}
+.intro h1 {
+    font-size: 150px;
+    text-transform: uppercase;
+    line-height: 0px;
+    /* text-shadow: 5px 5px 0px rgb(24, 231, 204); */
+    text-shadow: 5px 5px 5px rgb(99, 99, 99);
+
+}
+.intro h2 {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 400;
+    font-size: 55px;
+    font-variant: small-caps;
+    line-height: 30px;
+    text-shadow: 3px 3px 5px darkmagenta;
+
+}
+.intro p {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 40px;
+    /* text-shadow: 0px 3px 2px darkslateblue; */
+    background: rgba(211, 82, 125, 0.5); /* Black background with 0.5 opacity */
+}
+hr {
+    background-color: white;
+    /* background: linear-gradient(to right,  white, rgb(255, 5, 255), white); */
+    color: white;
+    height: 3px;
+    border-color: none;
+}
+.intro button {
+    width: 120px;
+}
+.intro-container {
+    position: relative;
+    text-align: center;
+    color: white;
+  }
+.intro-container img {
+    padding: 0;
+    display: block;
+    margin: 0 auto;
+    max-height: 100%;
+    max-width: 100%;
+    object-fit: contain;
+}
+
 .footer{
     grid-area: footer;
     color: white;
@@ -102,9 +176,25 @@ div #card-container {
     color: white;
     text-align: center;
 }
-#form-container input{
+input.full{
     height:30px; 
     width: 330px;
+    font-size: 16px;
+    border-radius: 25px;
+    margin: 5px;
+    padding-left: 10px;
+    padding-right: 15px;
+}
+div .im-container {
+    display: block; 
+}
+div .im-field{
+    display: flex;
+    justify-content: center;
+}
+.im-field > input {
+    height:30px; 
+    width: 125px;
     font-size: 16px;
     border-radius: 25px;
     margin: 5px;
@@ -121,10 +211,63 @@ div #card-container {
     margin: 5px;
     background-image: linear-gradient(to right, #A770EF 0%, #CF8BF3 51%, #A770EF 100%);
     font-weight: bolder;
-
+}
+.circle-btn {
+    color: white;
+    height:30px; 
+    width: 30px;
+    font-size: 16px;
+    border-radius: 25px;
+    text-align: center;
+    margin: 5px;
+    background-image: linear-gradient(to right, #A770EF 0%, #CF8BF3 51%, #A770EF 100%);
+    font-weight: bolder;
 }
 #find-form .fa {
     font-size: 20px;
+}
+.switch-field {
+    margin: 5px;
+    display: flex;
+    overflow: hidden;
+    background-color: white;
+    height:30px; 
+    width: 356px;
+    border-radius: 25px;
+    margin: 5px;
+    padding-left: 00px;
+    padding-right: 3px;
+    padding-top: 3px;
+    padding-bottom: 0px;
+}
+.switch-field p {
+    color: dimgrey;
+    font-size: 16px;
+    width: 159px;
+    text-align: left;
+}
+.switch-field input {
+    position: absolute !important;
+    clip: rect(0, 0, 0, 0);
+    height: 1px;
+    width: 1px;
+    border: 0;
+    overflow: hidden;
+}
+.switch-field label {
+    background-color: white;
+    color: #a9a9a9;
+    font-size: 16px;
+    text-align: center;
+    height:26px; 
+    width: 135px;
+    border-radius: 25px;
+    transition: all 0.1s ease-in-out;
+}
+.switch-field input:checked + label {
+    background-image: linear-gradient(to right, #A770EF 0%, #CF8BF3 51%, #A770EF 100%);
+    color: white;
+    font-weight: bold;
 }
 table {
     display: inline-table;
@@ -198,52 +341,4 @@ th, td {
     max-width:300px;
     max-height:200px;
     object-fit: contain;
-}
-.switch-field {
-    margin: 5px;
-    display: flex;
-    overflow: hidden;
-    background-color: white;
-    height:30px; 
-    width: 356px;
-    border-radius: 25px;
-    margin: 5px;
-    padding-left: 00px;
-    padding-right: 3px;
-    padding-top: 3px;
-    padding-bottom: 0px;
-
-}
-
-.switch-field p {
-    color: dimgrey;
-    font-size: 16px;
-    width: 159px;
-    text-align: left;
-}
-
-.switch-field input {
-    position: absolute !important;
-    clip: rect(0, 0, 0, 0);
-    height: 1px;
-    width: 1px;
-    border: 0;
-    overflow: hidden;
-}
-
-.switch-field label {
-    background-color: white;
-    color: #a9a9a9;
-    font-size: 16px;
-    text-align: center;
-    height:26px; 
-    width: 135px;
-    border-radius: 25px;
-    transition: all 0.1s ease-in-out;
-}
-
-.switch-field input:checked + label {
-    background-image: linear-gradient(to right, #A770EF 0%, #CF8BF3 51%, #A770EF 100%);
-    color: white;
-    font-weight: bold;
 }
